Add another integration test