@@ -16,119 +16,67 @@
  */
 package com.sonar.javascript.it.plugin;
 
-import static com.sonar.javascript.it.plugin.OrchestratorStarter.JAVASCRIPT_PLUGIN_LOCATION;
-import static com.sonar.javascript.it.plugin.OrchestratorStarter.getSonarScanner;
-import static java.util.Collections.singleton;
+import static com.sonarsource.scanner.integrationtester.utility.QualityProfileLoader.loadActiveRulesFromXmlProfile;
 import static org.assertj.core.api.Assertions.assertThat;
 
-import com.sonar.orchestrator.build.SonarScanner;
-import com.sonar.orchestrator.container.Edition;
-import com.sonar.orchestrator.junit5.OrchestratorExtension;
 import com.sonar.orchestrator.locator.FileLocation;
-import com.sonar.orchestrator.locator.MavenLocation;
+import com.sonarsource.scanner.integrationtester.dsl.EngineVersion;
+import com.sonarsource.scanner.integrationtester.dsl.ScannerInput;
+import com.sonarsource.scanner.integrationtester.dsl.SonarServerContext;
+import com.sonarsource.scanner.integrationtester.runner.ScannerRunner;
 import java.io.File;
-import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import org.junit.jupiter.api.AfterAll;
-import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
+import org.sonar.plugins.javascript.TypeScriptLanguage;
 
 class TypeScriptRuleTest {
 
   private static final String PROJECT_KEY = "ts-rule-project";
   private static final File PROJECT_DIR = TestUtils.projectDir(PROJECT_KEY);
-  static final String LITS_VERSION = "0.11.0.2659";
 
-  private static OrchestratorExtension orchestrator;
-
-  @BeforeAll
-  public static void before() throws IOException, InterruptedException {
-    orchestrator = OrchestratorExtension.builderEnv()
-      .useDefaultAdminCredentialsForBuilds(true)
-      .setEdition(Edition.ENTERPRISE_LW)
-      .activateLicense()
-      .setSonarVersion(System.getProperty("sonar.runtimeVersion", "LATEST_RELEASE"))
-      .addPlugin(JAVASCRIPT_PLUGIN_LOCATION)
-      .addPlugin(
-        MavenLocation.of("org.sonarsource.sonar-lits-plugin", "sonar-lits-plugin", LITS_VERSION)
+  private static final SonarServerContext SERVER_CONTEXT = SonarServerContext.builder()
+    .withProduct(SonarServerContext.Product.SERVER)
+    .withEngineVersion(EngineVersion.latestMasterBuild())
+    .withPlugin(SonarScannerIntegrationHelper.getJavascriptPlugin())
+    .withPlugin(SonarScannerIntegrationHelper.getLitsPlugin())
+    .withLanguage(
+      TypeScriptLanguage.KEY,
+      "TYPESCRIPT",
+      TypeScriptLanguage.FILE_SUFFIXES_KEY,
+      TypeScriptLanguage.DEFAULT_FILE_SUFFIXES
+    )
+    .withActiveRules(
+      loadActiveRulesFromXmlProfile(
+        Path.of("src", "test", "resources", "ts-rules-project-profile.xml")
       )
-      .build();
-
-    // Installation of SQ server in orchestrator is not thread-safe, so we need to synchronize
-    synchronized (OrchestratorStarter.class) {
-      orchestrator.start();
-    }
-
-    ProfileGenerator.generateProfile(
-      orchestrator,
-      "ts",
-      "typescript",
-      new ProfileGenerator.RulesConfiguration(),
-      singleton("S124")
-    );
-    ProfileGenerator.generateProfile(
-      orchestrator,
-      "js",
-      "javascript",
-      new ProfileGenerator.RulesConfiguration(),
-      singleton("CommentRegularExpression")
-    );
-
-    orchestrator
-      .getServer()
-      .restoreProfile(FileLocation.ofClasspath("/ts-rules-project-profile.xml"))
-      .restoreProfile(FileLocation.ofClasspath("/empty-js-profile.xml"))
-      .restoreProfile(FileLocation.ofClasspath("/empty-css-profile.xml"));
-  }
-
-  @AfterAll
-  public static void after() {
-    orchestrator.stop();
-  }
+    )
+    .build();
 
   @Test
   void test() throws Exception {
     ExpectedIssues.parseForExpectedIssues(PROJECT_KEY, PROJECT_DIR.toPath());
-    orchestrator.getServer().provisionProject(PROJECT_KEY, PROJECT_KEY);
 
-    orchestrator
-      .getServer()
-      .associateProjectToQualityProfile(PROJECT_KEY, "ts", "ts-rules-project-profile");
-    orchestrator.getServer().associateProjectToQualityProfile(PROJECT_KEY, "js", "empty-profile");
-    orchestrator.getServer().associateProjectToQualityProfile(PROJECT_KEY, "css", "empty-profile");
-
-    Path perfMonitoringDir = Path.of("target/monitoring/", PROJECT_KEY);
-    SonarScanner build = getSonarScanner()
-      .setProjectDir(PROJECT_DIR)
-      .setProjectKey(PROJECT_KEY)
-      .setSourceDirs(".")
-      .setDebugLogs(true)
-      .setProperty(
+    ScannerInput build = ScannerInput.create(PROJECT_KEY, PROJECT_DIR.toPath())
+      .withScmDisabled()
+      .withScannerProperty(
         "sonar.lits.dump.old",
         FileLocation.of("target/expected/ts/" + PROJECT_KEY).getFile().getAbsolutePath()
       )
-      .setProperty(
+      .withScannerProperty(
         "sonar.lits.dump.new",
         FileLocation.of("target/actual/ts/" + PROJECT_KEY).getFile().getAbsolutePath()
       )
-      .setProperty(
+      .withScannerProperty(
         "sonar.lits.differences",
         FileLocation.of("target/differences").getFile().getAbsolutePath()
       )
-      .setProperty("sonar.javascript.monitoring", "true")
-      .setProperty(
-        "sonar.javascript.monitoring.path",
-        perfMonitoringDir.toAbsolutePath().toString()
-      )
-      .setProperty("sonar.cpd.exclusions", "**/*");
+      .withScannerProperty("sonar.cpd.exclusions", "**/*")
+      .build();
 
-    orchestrator.executeBuild(build);
+    ScannerRunner.run(SERVER_CONTEXT, build);
 
-    assertThat(
-      new String(Files.readAllBytes(Paths.get("target/differences")), StandardCharsets.UTF_8)
-    ).isEmpty();
+    assertThat(Files.readString(Paths.get("target/differences"))).isEmpty();
   }
 }
